fix: hide useless scrollbars

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -93,7 +93,40 @@
            dark:[box-shadow:#ffffff33_0px_0px_15px,_#ffffff26_0px_0px_3px_1px];
   }
 
+  /* Wrap content to new lines */
   .multiline {
     overflow-wrap: anywhere;
+  }
+
+  /* Modern scrollbar styles
+     Firefox */
+  html {
+    scrollbar-width: thin;
+    scrollbar-color: #444 transparent;
+  }
+
+  /* Chrome and Chromium-based */
+  ::-webkit-scrollbar {
+    width: 8px;
+    background-color: transparent;
+  }
+
+  ::-webkit-scrollbar-thumb {
+    background-color: #444;
+    border-radius: 10px;
+  }
+
+  ::-webkit-scrollbar-thumb:hover {
+    background-color: #666;
+  }
+
+  /* Hide scrollbars */
+  .no-scrollbar::-webkit-scrollbar {
+    display: none !important; /* Chrome and Chromium-based */
+  }
+
+  .no-scrollbar {
+    -ms-overflow-style: none !important; /* Microsoft Edge */
+    scrollbar-width: none !important; /* Firefox */
   }
 }
